--- a/Road to Recovery/pages/assignDriverModal.html
+++ b/Road to Recovery/pages/assignDriverModal.html
@@ -4,13 +4,13 @@
             <button id="overRideBS_modal_4changeClose_x" type="button" class="close" data-dismiss="modal" aria-label="Close">
                 <span aria-hidden="true">&times;</span>
             </button>
-            <h2 class="modal-title">שיבוץ נהג להסעה</h2>
+            <h2 class="modal-title" id="driverModalTitle"></h2>
         </div>
         <div class="modal-body">
             <input placeholder="הזן שם" id="driver" name="driver" autocomplete="off" >
         </div>
         <div class="text-right modal-footer">
-            <button type="button" class="btn btn-secondary" data-dismiss="modal">ביטול</button>
+            <button type="button" class="btn btn-secondary"  onclick="assignDriverToRidePatAbort()" data-dismiss="modal">ביטול</button>
             <button type="button" onclick="assignDriverToRidePat()" id="assignDriverConfirm" class="btn btn-secondary">אישור</button>
         </div>
     </div>
