Added Demands in Dashboard daily

--- a/Road to Recovery/pages/reportsMain.html
+++ b/Road to Recovery/pages/reportsMain.html
@@ -550,25 +550,24 @@
                             <strong class="lead">ל - <span id="dsb_hl_daily_rides_attention" class="dsb_daily_num"> -- </span> אין עדיין נהג</strong>
                         </div>
 
-
-                        <div class="col-sm-1">
-                            &nbsp;
-                        </div>
-
                         <div class="col-sm-2" id="dsb_hl_daily_patients">
                             <h3>חולים</h3><p />
                             <p id="dsb_hl_daily_patients_total" class="dsb_daily_num">--</p>
                             <p>ל - <span id="dsb_hl_daily_patients_attention" class="dsb_daily_num"> -- </span> אין עדיין הסעה</p>
                         </div>
 
-                        <div class="col-sm-1">
-                            &nbsp;
-                        </div>
 
                         <div class="col-sm-2" id="dsb_hl_daily_volunteers">
                             <h3>מתנדבים</h3><p />
                             <p id="dsb_hl_daily_volunteers_total" class="dsb_daily_num">--</p>
                             <p> <span id="dsb_hl_daily_volunteers_attention" class="dsb_daily_num"> -- </span> חדשים</p>
+                        </div>
+
+
+                        <div class="col-sm-2" id="dsb_hl_daily_demands">
+                            <h3>דרישות</h3><p />
+                            <p id="dsb_hl_daily_demands_total" class="dsb_daily_num">--</p>
+                            <p> <span class="dsb_daily_num"> &nbsp; </span> &nbsp; </p>
                         </div>
 
                     </div>
