Support demands in Dashboard week/month/year. Optimize calculation of Multi-Seg in one query.

--- a/Road to Recovery/pages/reportsMain.html
+++ b/Road to Recovery/pages/reportsMain.html
@@ -196,7 +196,7 @@
             $("#dsb_hl").click(dashboard_hl_init);
 
             // fast-load dashboard:
-            // dashboard_hl_init();  
+            // dashboard_hl_init();
         });
 
 
@@ -637,6 +637,12 @@
                                 <div class="row dsb_weekly_num" id="dsb_hl_weekly_tbl_prev_new">--</div>
                                 <div class="row dsb_weekly_num" id="dsb_hl_weekly_tbl_2wks_ago_new">--         </div>
                             </div>
+                            <div class="col-sm-1">
+                                <div class="row">דרישות          </div>
+                                <div class="row dsb_weekly_num" id="dsb_hl_weekly_tbl_curr_demands">--             </div>
+                                <div class="row dsb_weekly_num" id="dsb_hl_weekly_tbl_prev_demands">--</div>
+                                <div class="row dsb_weekly_num" id="dsb_hl_weekly_tbl_2wks_ago_demands">--         </div>
+                            </div>
                             <div class="col-sm-3">
                                 &nbsp;
                             </div>
@@ -705,7 +711,13 @@
                                 <div class="row dsb_monthly_num" id="dsb_hl_monthly_tbl_prev_new">--</div>
                                 <div class="row dsb_monthly_num" id="dsb_hl_monthly_tbl_yoy_new">--         </div>
                             </div>
-                            <div class="col-sm-3">
+                            <div class="col-sm-1">
+                                <div class="row">דרישות          </div>
+                                <div class="row dsb_monthly_num" id="dsb_hl_monthly_tbl_curr_demands">--             </div>
+                                <div class="row dsb_monthly_num" id="dsb_hl_monthly_tbl_prev_demands">--</div>
+                                <div class="row dsb_monthly_num" id="dsb_hl_monthly_tbl_yoy_demands">--         </div>
+                            </div>
+                            <div class="col-sm-2">
                                 &nbsp;
                             </div>
                         </div>
@@ -757,6 +769,11 @@
                                 <div class="row">מתנדבים     <div class="dsb_hl_legend_header" style="background-color: rgb(255, 159, 64)"></div>       </div>
                                 <div class="row dsb_yearly_num" id="dsb_hl_yearly_tbl_ytd_vols">  --           </div>
                                 <div class="row dsb_yearly_num" id="dsb_hl_yearly_tbl_yoy_vols">--</div>
+                            </div>
+                            <div class="col-sm-1">
+                                <div class="row">דרישות           </div>
+                                <div class="row dsb_yearly_num" id="dsb_hl_yearly_tbl_ytd_demands">  --           </div>
+                                <div class="row dsb_yearly_num" id="dsb_hl_yearly_tbl_yoy_demands">--</div>
                             </div>
                         </div>
 
