--- a/Road to Recovery/pages/manageRidePats.html
+++ b/Road to Recovery/pages/manageRidePats.html
@@ -445,7 +445,7 @@
         const { ajaxCall } = GENERAL.FETCH_DATA;
         const { APP_ID } = GENERAL;
 
-        const controllersLayout = "<'row'<'col-sm-6'l><'col-sm-5'f><'col-sm-1'B>>";//https://datatables.net/reference/option/dom
+        const controllersLayout = "<'row top'<'col-sm-6'l><'col-sm-5'f><'col-sm-1'B>>rt<'bottom'p>";//https://datatables.net/reference/option/dom
         let drivers, driverNames;
         let _assignDriverToRidepatNum;
         let _assignDriverToRideNum;
