GetReportCenterTomorrowsRides - server side

--- a/Road to Recovery/pages/reportsMain.html
+++ b/Road to Recovery/pages/reportsMain.html
@@ -190,6 +190,8 @@
             $("#rp_center_daily_by_month").click(on_report_click);
             $("#rp_center_monthly_by_year").click(on_report_click);
             $("#rp_center_patients_rides").click(on_report_click);
+            $("#rp_center_tomorrows_rides").click(on_report_click);
+            
 
 
             
@@ -299,6 +301,7 @@
                                         <li><a class="report_link_cls" id="rp_center_daily_by_month"> מרכז תיאום - מבט יומי</a></li>
                                         <li><a class="report_link_cls" id="rp_center_monthly_by_year"> מרכז תיאום - מבט חודשי</a></li>
                                         <li><a class="report_link_cls" id="rp_center_patients_rides"> מרכז תיאום - הסעת חולים</a></li>
+                                        <li><a class="report_link_cls" id="rp_center_tomorrows_rides"> מרכז תיאום - הסעות של מחר</a></li>
                                     </ul>
                                 </li>
                                 <li>
