--- a/Road to Recovery/pages/manageRidePats.html
+++ b/Road to Recovery/pages/manageRidePats.html
@@ -2757,6 +2757,9 @@
         var resizefunc = [];
     </script>
 
+    <!-- side menu toggle functiolity is from here -->
+    <script src="assets/js/jquery.app.js"></script>
+
     <div class="modal fade" id="messagesModal" tabindex="-1" role="dialog" aria-labelledby="messagesModalTitle"
          aria-hidden="true">
         <div class="modal-dialog" role="document">
