--- a/Road to Recovery/pages/reportsMain.html
+++ b/Road to Recovery/pages/reportsMain.html
@@ -508,6 +508,23 @@
                                     </tfoot>
                                 </table>
                             </div>
+                            <div id="div_table_center_tomorrows_rides" style="display:none" class="card-box table-responsive">
+                                <table id="table_center_tomorrows_rides" class="table table-striped table-bordered">
+                                    <thead>
+                                        <tr>
+                                            <th title="Origin" class="timeCustomWidth">  מוצא</th>
+                                            <th title="Destination" class="timeCustomWidth">יעד</th>
+                                            <th title="Pickuptime" class="timeCustomWidth">שעה</th>
+                                            <th title="pat1_name" class="timeCustomWidth">חולה</th>
+                                            <th title="pat1_escorts" class="timeCustomWidth">מלווים</th>
+                                            <th title="pat2_name" class="timeCustomWidth">חולה</th>
+                                            <th title="pat2_escorts" class="timeCustomWidth">מלווים</th>
+
+                                        </tr>
+                                    </thead>
+                                    <tbody></tbody>
+                                </table>
+                            </div>
 
                             <div id="wait" style="display:none;width:69px;height:89px;position:fixed;top:50%;left:50%;padding:2px;">
                                 <img src="../../Media/Wedges-3s-200px.gif" width="64" height="64" />
